--- a/package.json
+++ b/package.json
@@ -1,40 +1,35 @@
 {
-  "name": "uitest",
-  "private": true,
-  "version": "0.0.1",
-  "type": "module",
-  "scripts": {
-    "dev": "vite dev",
-    "build": "vite build",
-    "preview": "vite preview",
-    "prepare": "svelte-kit sync || echo ''",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
-  },
-  "devDependencies": {
-    "@sveltejs/adapter-auto": "^3.0.0",
-    "@sveltejs/kit": "^2.0.0",
-    "@sveltejs/vite-plugin-svelte": "^3.0.0",
-    "@tailwindcss/typography": "^0.5.14",
-    "autoprefixer": "^10.4.23",
-    "flowbite": "^2.5.1",
-    "flowbite-svelte": "^0.46.16",
-    "flowbite-svelte-icons": "^1.6.1",
-    "postcss": "^8.5.6",
-    "prettier": "^3.6.2",
-    "prettier-plugin-svelte": "^3.4.0",
-    "svelte": "^4.2.7",
-    "svelte-check": "^4.0.0",
-    "svelte-meta-tags": "^3.1.4",
-    "tailwindcss": "^3.4.19",
-    "typescript": "^5.0.0",
-    "vite": "^5.0.3"
-  },
-  "dependencies": {
-    "@sveltejs/adapter-node": "^5.2.13",
-    "@tiptap/core": "^2.11.5",
-    "@tiptap/starter-kit": "^2.11.5",
-    "axios": "^1.7.7",
-    "vitest": "^2.0.5"
-  }
+	"name": "uitest",
+	"private": true,
+	"version": "0.0.1",
+	"type": "module",
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"prepare": "svelte-kit sync || echo ''",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+	},
+	"devDependencies": {
+		"@sveltejs/adapter-auto": "^7.0.0",
+		"@sveltejs/kit": "^2.49.1",
+		"@sveltejs/vite-plugin-svelte": "^6.2.1",
+		"@tailwindcss/vite": "^4.1.17",
+		"flowbite": "^4.0.1",
+		"flowbite-svelte": "^1.31.0",
+		"flowbite-svelte-icons": "^3.1.0",
+		"svelte": "^5.45.6",
+		"svelte-check": "^4.3.4",
+		"tailwindcss": "^4.1.17",
+		"typescript": "^5.9.3",
+		"vite": "^7.2.6",
+		"vitest": "^4.0.17"
+	},
+	"dependencies": {
+		"axios": "^1.13.2",
+		"dotenv": "^17.2.3",
+		"svelte-persisted-store": "^0.12.0",
+		"svelty-picker": "^6.1.6"
+	}
 }
